@@ -15,13 +15,13 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import controller_msgs.msg.dds.FootstepDataListMessage;
-import controller_msgs.msg.dds.FootstepDataMessage;
-import controller_msgs.msg.dds.HandTrajectoryMessage;
-import controller_msgs.msg.dds.PrepareForLocomotionMessage;
-import controller_msgs.msg.dds.StopAllTrajectoryMessage;
-import controller_msgs.msg.dds.TaskspaceTrajectoryStatusMessage;
-import ihmc_common_msgs.msg.dds.SE3TrajectoryPointMessage;
+import controller_msgs.FootstepDataListMessage;
+import controller_msgs.FootstepDataMessage;
+import controller_msgs.HandTrajectoryMessage;
+import controller_msgs.PrepareForLocomotionMessage;
+import controller_msgs.StopAllTrajectoryMessage;
+import controller_msgs.TaskspaceTrajectoryStatusMessage;
+import ihmc_common_msgs.SE3TrajectoryPointMessage;
 import us.ihmc.avatar.DRCObstacleCourseStartingLocation;
 import us.ihmc.avatar.MultiRobotTestInterface;
 import us.ihmc.avatar.testTools.EndToEndTestTools;
@@ -59,7 +59,7 @@ import us.ihmc.euclid.tuple4D.interfaces.QuaternionReadOnly;
 import us.ihmc.humanoidRobotics.communication.packets.HumanoidMessageTools;
 import us.ihmc.humanoidRobotics.communication.packets.TrajectoryExecutionStatus;
 import us.ihmc.humanoidRobotics.frames.HumanoidReferenceFrames;
-import us.ihmc.idl.IDLSequence.Object;
+import us.ihmc.fastddsjava.cdr.idl.IDLObjectSequence;
 import us.ihmc.matrixlib.MatrixTools;
 import us.ihmc.mecano.multiBodySystem.interfaces.OneDoFJointBasics;
 import us.ihmc.mecano.multiBodySystem.interfaces.OneDoFJointReadOnly;
@@ -194,7 +194,7 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
          handTrajectoryMessage.setSequenceId(random.nextLong());
 
          // ROS1 users have these fields set to zero by default which can cause an exception to be thrown even if these fields are not used.
-         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getOrientation().setUnsafe(0.0, 0.0, 0.0, 0.0);
+         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getPose().getOrientation().setUnsafe(0.0, 0.0, 0.0, 0.0);
 
          simulationTestHelper.publishToController(handTrajectoryMessage);
          success = simulationTestHelper.simulateNow(3 * controllerDT);
@@ -304,7 +304,7 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
          handTrajectoryMessage.setSequenceId(random.nextLong());
 
          // ROS1 users have these fields set to zero by default which can cause an exception to be thrown even if these fields are not used.
-         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getOrientation().setUnsafe(0.0, 0.0, 0.0, 0.0);
+         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getPose().getOrientation().setUnsafe(0.0, 0.0, 0.0, 0.0);
 
          simulationTestHelper.publishToController(handTrajectoryMessage);
          success = simulationTestHelper.simulateNow(controllerDT);
@@ -373,7 +373,7 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
       {
          HandTrajectoryMessage handTrajectoryMessage = new HandTrajectoryMessage();
          handTrajectoryMessage.setRobotSide(robotSide.toByte());
-         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getPosition().set(new Point3D(0.0, 0.0, 0.0));
+         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getPose().getPosition().set(new Point3D(0.0, 0.0, 0.0));
          handTrajectoryMessage.getSe3Trajectory().setUseCustomControlFrame(true);
          handTrajectoryMessage.getSe3Trajectory().getTaskspaceTrajectoryPoints().add()
                               .set(HumanoidMessageTools.createSE3TrajectoryPointMessage(trajectoryTime, position, orientation, new Vector3D(), new Vector3D()));
@@ -399,8 +399,8 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
          handTrajectoryMessage.getSe3Trajectory().setUseCustomControlFrame(true);
          Point3D framePosition = EuclidCoreRandomTools.nextPoint3D(random, -0.1, 0.1);
          Quaternion frameOrientation = EuclidCoreRandomTools.nextQuaternion(random, Math.toRadians(20.0));
-         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getPosition().set(framePosition);
-         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getOrientation().set((Orientation3DReadOnly) frameOrientation);
+         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getPose().getPosition().set(framePosition);
+         handTrajectoryMessage.getSe3Trajectory().getControlFramePose().getPose().getOrientation().set((Orientation3DReadOnly) frameOrientation);
 
          ReferenceFrame handBodyFrame = fullRobotModel.getHand(robotSide).getBodyFixedFrame();
          FrameVector3D frameFramePosition = new FrameVector3D(handBodyFrame, framePosition);
@@ -568,11 +568,7 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
 
          SE3TrajectoryPointMessage lastPoint = handTrajectoryPoints.get(robotSide).peekLast();
          FrameSE3TrajectoryPoint lastFramePoint = new FrameSE3TrajectoryPoint(worldFrame);
-         lastFramePoint.set(lastPoint.getTime(),
-                            lastPoint.getPosition(),
-                            lastPoint.getOrientation(),
-                            lastPoint.getLinearVelocity(),
-                            lastPoint.getAngularVelocity());
+         lastFramePoint.set(lastPoint.getTime(), lastPoint.getPosition().getPoint(), lastPoint.getOrientation().getQuaternion(), lastPoint.getLinearVelocity().getVector(), lastPoint.getAngularVelocity().getVector());
          lastTrajectoryPoints.put(robotSide, lastFramePoint);
 
          String handName = fullRobotModel.getHand(robotSide).getName();
@@ -582,7 +578,7 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
          {
             SE3TrajectoryPointMessage point = handTrajectoryPoints.get(robotSide).removeFirst();
             FrameSE3TrajectoryPoint framePoint = new FrameSE3TrajectoryPoint(worldFrame);
-            framePoint.set(point.getTime(), point.getPosition(), point.getOrientation(), point.getLinearVelocity(), point.getAngularVelocity());
+            framePoint.set(point.getTime(), point.getPosition().getPoint(), point.getOrientation().getQuaternion(), point.getLinearVelocity().getVector(), point.getAngularVelocity().getVector());
 
             SE3TrajectoryPoint controllerTrajectoryPoint = EndToEndTestTools.findSE3TrajectoryPoint(handName, trajectoryPointIndex, simulationTestHelper);
             SE3TrajectoryPoint expectedTrajectoryPoint = new SE3TrajectoryPoint();
@@ -625,8 +621,8 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
          EndToEndTestTools.assertTaskspaceTrajectoryStatus(handTrajectoryMessage.getSequenceId(),
                                                            TrajectoryExecutionStatus.COMPLETED,
                                                            expectedTimestamp,
-                                                           lastTrajectoryPoint.getPosition(),
-                                                           lastTrajectoryPoint.getOrientation(),
+                                                           lastTrajectoryPoint.getPosition().getPoint(),
+                                                           lastTrajectoryPoint.getOrientation().getQuaternion(),
                                                            handName,
                                                            statusMessage,
                                                            1.0e-12,
@@ -909,11 +905,11 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
       for (int inputIndex = 0; inputIndex < handTrajectoryMessages.size(); inputIndex++)
       {
          HandTrajectoryMessage handTrajectoryMessage = handTrajectoryMessages.get(inputIndex);
-         Object<SE3TrajectoryPointMessage> taskspaceTrajectoryPoints = handTrajectoryMessage.getSe3Trajectory().getTaskspaceTrajectoryPoints();
+         IDLObjectSequence<SE3TrajectoryPointMessage> taskspaceTrajectoryPoints = handTrajectoryMessage.getSe3Trajectory().getTaskspaceTrajectoryPoints();
 
          double endTime = startTime + taskspaceTrajectoryPoints.getLast().getTime();
          if (inputIndex > 0)
-            startTime += taskspaceTrajectoryPoints.getFirst().getTime();
+            startTime += taskspaceTrajectoryPoints.get(0).getTime();
 
          TaskspaceTrajectoryStatusMessage startedStatus = statusMessages.remove(0);
          TaskspaceTrajectoryStatusMessage completedStatus = statusMessages.remove(0);
@@ -1592,8 +1588,7 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
          FramePose3D currentPose = new FramePose3D(hand.getBodyFixedFrame());
          currentPose.changeFrame(worldFrame);
          EuclidCoreTestTools.assertEquals("Poor position tracking for side: " + robotSide + " error: "
-               + currentPose.getPosition().distance(controllerDesiredPose.getPosition()),
-                                          controllerDesiredPose.getPosition(),
+               + currentPose.getPosition().distance(controllerDesiredPose.getPosition()), controllerDesiredPose.getPosition(),
                                           currentPose.getPosition(),
                                           3.0e-2);
          EuclidCoreTestTools.assertOrientation3DGeometricallyEquals("Poor orientation tracking for side: " + robotSide + " error: "
@@ -1657,7 +1652,7 @@ public abstract class EndToEndHandTrajectoryMessageTest implements MultiRobotTes
    {
       double walkingDuration = 0.0;
 
-      Object<FootstepDataMessage> footsteps = message.getFootstepDataList();
+      IDLObjectSequence<FootstepDataMessage> footsteps = message.getFootstepDataList();
 
       if (footsteps.isEmpty())
          return walkingDuration;
